renderMessage function is now in proper place. Fixed bug with preview visibility and scroll. If condition textarea is now editable, and we can add condition to it (todo: add condition support) Textarea.tsx component minor improvements

--- a/src/components/MessagePreview.module.css
+++ b/src/components/MessagePreview.module.css
@@ -1,19 +1,21 @@
 /* MessagePreview.module.css */
 .preview {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    overflow: auto;
 }
 
 .previewContent {
     padding: 20px;
+    margin: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
@@ -34,6 +36,8 @@
     background-color: #4f505b;
     border-radius: 5px;
     padding: 10px;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .inputContainer {
